samples/_failures_safe/1761618611_2d7993_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_11ba17ae.c: In function ‘main’:
./samples/SAFE/__tmp_11ba17ae.c:151:5: error: expected declaration or statement at end of input
  151 |     add_edge(&g, 2, 3, 8);
      |     ^~~~~~~~
